# galaxy_ng

./: .compose.env.example  Dockerfile  Makefile  README.md  compose  dev_requirements.txt  pyproject.toml  setup.cfg  setup.py
CHANGES/: 708.misc
dev/: Dockerfile.base  docker-compose.yml
dev/common/: settings.py
dev/insights/: Dockerfile
dev/standalone/: Dockerfile
docker/: entrypoint.sh
galaxy_ng/app/: __init__.py  admin.py  logging.yaml  settings.py  settings_logging.py  urls.py
galaxy_ng/app/access_control/: access_policy.py  access_policy_verbose.py
galaxy_ng/app/access_control/statements/: insights.py  standalone.py
galaxy_ng/app/admin/: __init__.py  pulp_ansible.py
galaxy_ng/app/api/: exceptions.py  permissions.py  urls.py
galaxy_ng/app/api/ui/: urls.py
galaxy_ng/app/api/ui/serializers/: user.py  (+3 more)
galaxy_ng/app/api/v3/: synclists.py  urls.py  viewsets.py
galaxy_ng/app/auth/: auth.py
galaxy_ng/app/migrations/: 0002_add_synclist_20200330.py  0003_auto_20200330_1955.py  0011_collection_import_task_id_fk.py  0014_cleanup_galaxy_collection_orphans.py
galaxy_ng/app/models/: __init__.py  auth.py  collectionimport.py  collectionsync.py  namespace.py  sync.py
galaxy_ng/app/tasks/: synclist.py
galaxy_ng/tests/unit/api/: synclist_base.py  test_api_ui_my_synclists.py  test_api_ui_synclists.py  test_api_ui_user_viewsets.py  test_api_v3_namespace_viewsets.py
openapi/: openapi.yaml  ui_openapi.yaml
requirements/: constraints.standalone.txt  requirements.common.txt  requirements.dev.txt  requirements.insights.txt  requirements.standalone.txt
(+15 files in other folders)
